--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -6,7 +6,7 @@
 	(BROKEN_SIGPTY, BSD4_2, BSD_SYSTEM, BSD_SYSTEM_AHB, CYGWIN, DARWIN_OS)
 	(FIRST_PTY_LETTER, GNU_LINUX, G_SLICE_ALWAYS_MALLOC, HAVE_PTYS)
 	(HAVE_SOCKETS, HPUX, INTERRUPT_INPUT, IRIX6_5, NARROWPROTO, NO_ABORT)
-	(NO_EDITRES, NSIG_MINIMUM, PREFER_VSUSP, PTY_ITERATION
+	(NO_EDITRES, NSIG_MINIMUM, PREFER_VSUSP, PTY_ITERATION)
 	(PTY_NAME_SPRINTF, PTY_OPEN, PTY_TTY_NAME_SPRINTF, RUN_TIME_REMAP)
 	(SETPGRP_RELEASES_CTTY, SOLARIS2, TAB3, TABDLY, ULIMIT_BREAK_VALUE)
 	(UNIX98_PTYS, USG, USG5, XOS_NEEDS_TIME_H, _AIX): New macros.
