--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -832,7 +832,7 @@
 2011-08-15  Eric Schulte  <schulte.eric@gmail.com>
 
 	* org.texi (Structure of code blocks): Explicitly state that the
-	behavior of multiple blocks of the same name is undefined
+	behavior of multiple blocks of the same name is undefined.
 
 2011-08-15  Christian Egli  <christian.egli@sbszh.ch>
 
@@ -1199,7 +1199,7 @@
 
 2011-03-19  Antoine Levitt  <antoine.levitt@gmail.com>
 
-	* gnus.texi (Listing Groups): Document gnus-group-list-ticked
+	* gnus.texi (Listing Groups): Document gnus-group-list-ticked.
 
 2011-03-17  Jay Belanger  <jay.p.belanger@gmail.com>
 
@@ -3124,7 +3124,7 @@
 2009-07-29  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc.texi (Stack Manipulation Commands): Add documentation for
-	`calc-transpose-lines'
+	`calc-transpose-lines'.
 
 2009-07-27  Michael Albinus  <michael.albinus@gmx.de>
 
