--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1738,7 +1738,7 @@
 
 2012-06-05  Sam Steingold  <sds@gnu.org>
 
-	* calendar/calendar.el (calendar-exit): reinstate the 2012-03-28
+	* calendar/calendar.el (calendar-exit): Reinstate the 2012-03-28
 	patch (Bug#11140).
 
 2012-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>
@@ -3603,7 +3603,7 @@
 
 	* textmodes/ispell.el (ispell-buffer-session-localwords):
 	New buffer-local variable to hold buffer session localwords.
-	(ispell-kill-ispell): add option 'clear to delete session
+	(ispell-kill-ispell): Add option 'clear to delete session
 	localwords.
 	(ispell-command-loop, ispell-change-dictionary)
 	(ispell-buffer-local-words): Preserve session localwords when
