Adapt the MS-DOS build to the latest configury changes.
 msdos/sed1v2.inp: In the recipe for $(leimdir)/leim-list.el, edit the
 prerequisites to be "temacs$(EXEEXT) $(BOOTSTRAPEMACS)", to avoid
 the need to rebuild $(bootstrap_exe), which requires a Unixy shell
 via lisp/Makefile.in's "update-subdirs" command.
 msdos/sedlibmk.inp (am_libgnu_a_OBJECTS): Adjust the removal of
 careadlinkat.$(OBJEXT) to the changes in lib/Makefile.in.
 msdos/sed2v2.inp (DATA_START, GC_SETJMP_WORKS, HAVE_MENUS)
 (HAVE_MOUSE): Edit for DJGPP, according to what was previously
 done on src/s/msdos.h.
 msdos/gmalloc.c (GMALLOC_INHIBIT_VALLOC): Don't reference.
 src/s/msdos.h (BSD_SYSTEM, DATA_START, GC_SETJMP_WORKS, HAVE_MOUSE)
 (HAVE_MENUS): Don't define, defined by editing config.in with
 msdos/sed2v2.inp.
 (GMALLOC_INHIBIT_VALLOC): Don't define.
 (MODE_LINE_BINARY_TEXT): Remove, not used anymore.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2012-07-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* gmalloc.c (GMALLOC_INHIBIT_VALLOC): Don't reference.
+
+	* s/msdos.h (BSD_SYSTEM, DATA_START, GC_SETJMP_WORKS, HAVE_MOUSE)
+	(HAVE_MENUS): Don't define, defined by editing config.in with
+	msdos/sed2v2.inp.
+	(GMALLOC_INHIBIT_VALLOC): Don't define.
+	(MODE_LINE_BINARY_TEXT): Remove, not used anymore.
+
 2012-07-14  Juanma Barranquero  <lekktu@gmail.com>
 
 	* s/ms-w32.h (GC_SETJMP_WORKS, GC_MARK_STACK): Set in nt/config.nt.
