--- a/msdos/ChangeLog
+++ b/msdos/ChangeLog
@@ -1,3 +1,17 @@
+2012-07-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* sed1v2.inp: In the recipe for $(leimdir)/leim-list.el, edit the
+	prerequisites to be "temacs$(EXEEXT) $(BOOTSTRAPEMACS)", to avoid
+	the need to rebuild $(bootstrap_exe), which requires a Unixy shell
+	via lisp/Makefile.in's "update-subdirs" command.
+
+	* sedlibmk.inp (am_libgnu_a_OBJECTS): Adjust the removal of
+	careadlinkat.$(OBJEXT) to the changes in lib/Makefile.in.
+
+	* sed2v2.inp (DATA_START, GC_SETJMP_WORKS, HAVE_MENUS)
+	(HAVE_MOUSE): Edit for DJGPP, according to what was previously
+	done on src/s/msdos.h.
+
 2012-06-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* mainmake.v2 (bootstrap-clean): Do a maintainer-clean in lib, not
