--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* CPP-DEFINES: Remove FILE_SYSTEM_CASE.
+
 2012-06-01  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.1 released.
