--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-14  Leo Liu  <sdl.web@gmail.com>
+
+	* fringe.el: New bitmap exclamation-mark.
+
 2012-07-14  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* progmodes/cc-cmds.el (c-defun-name): Recognize Objective-C methods
