--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-15  Leo Liu  <sdl.web@gmail.com>
+
+	* display.texi (Fringe Bitmaps): Add exclamation-mark.
+
 2012-07-13  Chong Yidong  <cyd@gnu.org>
 
 	* buffers.texi (Read Only Buffers): Document toggle-read-only
