--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-15  Leo Liu  <sdl.web@gmail.com>
+
+	* NEWS: Mention exclamation-mark and flymake.
+
 2012-07-08  Juanma Barranquero  <lekktu@gmail.com>
 
 	* tutorials/TUTORIAL.es: Sync with changes in revno:108936.
