--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-15  Eli Zaretskii  <eliz@gnu.org>
+
+	* bidi.c (MAX_STRONG_CHAR_SEARCH): New macro.
+	(bidi_paragraph_init): Use it to limit search forward for a strong
+	directional character in abnormally large paragraphs full of
+	neutral or weak characters.  (Bug#11943)
+
 2012-07-15  Stefano Facchini  <stefano.facchini@gmail.com>  (tiny change)
 
 	* gtkutil.c (xg_create_tool_bar): Apply "primary-toolbar" style to
