--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-16  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (keyDown): Interpret flags without left/right bits
+	as the left key (Bug#11670).
+
 2012-07-16  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Remove empty and useless init functions.
