--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-17  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Restore old code in allocate_string_data to avoid Faset breakage.
+	Reported by Julien Danjou <julien@danjou.info> in
+	http://lists.gnu.org/archive/html/emacs-devel/2012-07/msg00371.html.
+	* alloc.c (allocate_string_data): Restore old code with minor
+	adjustments, fix comment to explain this subtle issue.
+
 2012-07-17  Eli Zaretskii  <eliz@gnu.org>
 
 	Remove FILE_SYSTEM_CASE.
